<resources>
    <string name="app_name">MVVM Kotlin test</string>
    <string name="uyari">Uyarı</string>
    <string name="emin_misiniz">Emin misiniz?</string>
    <string name="error_message_401">Bağlantı hatası: 401</string>
    <string name="error_message_404">Bağlantı hatası: 404</string>
    <string name="error_message_500">Bağlantı hatası: 500</string>
    <string name="error_message_main">Bir hata ile karşılaşıldı.</string>
    <string name="bu_islemi_tamamlamak_icin_izin_vermeniz_gerekmektedir">Bu işlemi tamamlamak için izniniz gerekmektedir.</string>
    <string name="izinler">İzinler</string>
    <string name="lorem_ipsum_s">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). "</string>
    <string name="vazgec">Vazge.</string>
    <string name="iptal">İptal</string>
    <string name="tamam">Tamam</string>
    <string name="hata">Hata</string>
    <string name="bilgi">Bilgi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>